<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Leído</string>
    <string name="tab_leidos">Leídos</string>
    <string name="tab_deseados">Deseados</string>
    <string name="msg_leidos">Aquí aparecerán los libros que leíste</string>
    <string name="msg_deseados">Aquí aparecerán los libros que deseas leer</string>

    <!-- Dialog / form -->
    <string name="dialog_add_title">Añadir libro</string>
    <string name="hint_titulo">Título (obligatorio)</string>
    <string name="hint_autor">Autor</string>
    <string name="hint_editorial">Editorial</string>
    <string name="hint_isbn">ISBN</string>
    <string name="hint_comentario">Comentario</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="error_title_required">El título es obligatorio</string>

    <string name="action_mark_read">Marcar como leído</string>
    <string name="action_delete">Eliminar</string>
    <string name="action_cancel">Cancelar</string>
    <string name="confirm_delete_leidos">¿Eliminar "%1$s" de Leídos?</string>
    <string name="confirm_mark_read">¿Marcar "%1$s" como leído?</string>
    <string name="msg_deleted"> eliminado</string>
</resources>
