<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/inputTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_titulo"
            android:inputType="text" />

        <EditText
            android:id="@+id/inputAutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_autor"
            android:inputType="text" />

        <EditText
            android:id="@+id/inputEditorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_editorial"
            android:inputType="text" />

        <EditText
            android:id="@+id/inputIsbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_isbn"
            android:inputType="text" />

        <EditText
            android:id="@+id/inputComentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_comentario"
            android:inputType="textMultiLine"
            android:minLines="2" />
    </LinearLayout>
</ScrollView>
